--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     },
     "plugins": [
       {
-        "transform": "@zerollup/ts-transform-paths"
+        "transform": "@zerollup/ts-transform-paths",
+        "exclude": ["*"]
       }
     ]
   }
